Tests/Conformance/Generated/Builtin/Constant/Bls12_381/G1/Bad_zero_01.lean
-- Auto-generated by gen_conformance_tests.py — do not edit manually.
import Tests.Conformance.ConformanceUtils
import PlutusCore.UPLC.ScriptEncoding.Basic

namespace Tests.Conformance.Generated.Builtin.Constant.Bls12_381.G1.Bad_zero_01

open Tests.Conformance

/-- error: Parsing error -/
#guard_msgs in
#conformance_import_uplc builtin_constant_bls12_381_G1_bad_zero_01 "../.plutus-conformance/plutus-conformance/test-cases/uplc/evaluation/builtin/constant/bls12-381/G1/bad-zero-01/bad-zero-01.uplc"

end Tests.Conformance.Generated.Builtin.Constant.Bls12_381.G1.Bad_zero_01
